--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
 
 <body>
   <!-- Navbar Area start -->
-  <section id="header_area_start" class="header_area text-white pt-3">
+  <section id="header_area_start" class="header_area pt-3">
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand text-white" href="#">Sabbir Mahmud.</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon text-white"></span>
+          <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse text-white" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link text-white" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link text-white" href="#header_area_start">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Contact</a>
+              <a class="nav-link text-white" href="#contact-me_area">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Services</a>
+              <a class="nav-link text-white" href="#about_section">Services</a>
             </li>
           </ul>
 
@@ -285,7 +285,7 @@
             <h5 class="px-5 pb-5" data-aos="fade-up">2018</h5>
 
             <p class="px-5 pb-5" data-aos="fade-up">I learn front end development from W3school in 2019. I'm expert
-              in HTML, CSS, JavaScript. I try my best to complete my project.</p>
+              in HTML, CSS, Bootstrap, JavaScript, Jquery, React js. I try my best to complete my project.</p>
 
             <!-- Education area ends -->
           </div>
@@ -300,7 +300,7 @@
       <div class="row">
         <div class="col-lg-12">
 
-          <div class="contact-title text-dark text-left pt-5 pb-5" data-aos="fade-up">
+          <div class="contact-me-title text-dark pt-5 pb-5" data-aos="fade-up">
             <h3>Contact Me</h3>
           </div>
 
@@ -309,14 +309,14 @@
               <h3 class="mb-4">Send a Message</h3>
             </div>
             <div class="contact-input mb-5">
-              <input class="py-3 mb-3" type="text" placeholder="Enter Your Full Name" data-aos="fade-up">
-              <input class="py-3 mb-3" type="email" placeholder="Enter Your E-mail" data-aos="fade-up">
+              <input id="con-name" class="py-3 mb-3" type="text" placeholder="Enter Your Full Name" data-aos="fade-up">
+              <input id="con-mail" class="py-3 mb-3" type="email" placeholder="Enter Your E-mail" data-aos="fade-up">
             </div>
             <div class="contact-msg mb-5">
-              <input class="pb-5 mb-3" type="text" placeholder="Write your massage here..." data-aos="fade-up">
+              <input id="con-msg" class="pb-5 mb-3" type="text" placeholder="Write your massage here..." data-aos="fade-up">
             </div>
     
-            <button class="contact-btn btn btn-info mb-5" data-aos="fade-up">Send</button>
+            <button id="con-btn" class="contact-btn btn btn-info mb-5">Send</button>
 
           </div>
 
@@ -331,7 +331,7 @@
               <h3><i class="fas fa-envelope-open"></i> Coderboypro@gmail.com</h3>
             </div>
             <div class="contact-call ml-5 pt-4 text-white" data-aos="fade-up">
-              <h3><i class="fas fa-phone-alt"></i> 01782844241</h3>
+              <h3><i class="fas fa-phone-alt"></i> 01782-844241</h3>
             </div>
             <ul class="nav ml-5 mt-5 pb-4 contact-nav" data-aos="fade-up">
               <li class="nav-item">
@@ -355,7 +355,7 @@
   </section>
   <!-- contact me area ends -->
   <!-- footer area -->
-  <footer class="footer-area " id="footer_area" data-aos="fade-up">
+  <footer class="footer-area " id="footer_area">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-md-6 footer-details">
@@ -365,16 +365,16 @@
             <li class="nav-item"><a class="nav-link text-white" href="#"><i class="fa fa-copyright"
                   aria-hidden="true"></i> Copyright- Sabbir 2020 </a></li>
 
-            <li class="nav-item"><a class="nav-link text-white" href="#">Home</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#header_area_start">Home</a></li>
 
-            <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="#about_section">Services</a></li>
           </ul>
 
 
         </div>
 
         <!-- facebook pages -->
-        <div class="col-lg-6 col-md-6 d-sm-none d-md-inline-block">
+        <div class="col-lg-6 col-md-6 footer-facebook">
           <iframe class="mt-5 rounded"
             src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fpro.coderboy&tabs&width=400&height=100&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
             width="100%" height="100" style="border:none; overflow:hidden" scrolling="no" frameborder="0"
